Update 'oy9jayjmk-go' component image to: quay.io/rhtap_qe/rhtap-qe:dba68156c897509f4cb04d2a3e36f92a59467e15@sha256:bde7f677bf41d3bee040d809249dfa41e0aeb627d0d29945c8dc607c40d2e4de

--- a/components/oy9jayjmk-go/overlays/development/deployment-patch.yaml
+++ b/components/oy9jayjmk-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: oy9jayjmk-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:dba68156c897509f4cb04d2a3e36f92a59467e15@sha256:bde7f677bf41d3bee040d809249dfa41e0aeb627d0d29945c8dc607c40d2e4de
+          name: container-image
